src/snapshots/meshb__mail_parser__tests__group_name_should_work-3.snap
---
source: src/mail_parser.rs
expression: "group_name(\"aaa_aaaa\")"
---
Ok(
    (
        "",
        "aaa_aaaa",
    ),
)
