src/snapshots/meshb__mail_parser__tests__group_name_should_work-4.snap
---
source: src/mail_parser.rs
expression: "group_name(\"aa1a_Aaaa\")"
---
Ok(
    (
        "",
        "aa1a_Aaaa",
    ),
)
