src/snapshots/meshb__mail_parser__tests__group_name_should_work-6.snap
---
source: src/mail_parser.rs
expression: "group_name(\"1a_Aaaa\")"
---
Err(
    Error(
        Base {
            location: "1a_Aaaa",
            kind: Expected(
                Alpha,
            ),
        },
    ),
)
