src/snapshots/meshb__mail_parser__tests__group_name_should_work-7.snap
---
source: src/mail_parser.rs
expression: "group_name(\"GOP2 d\")"
---
Ok(
    (
        " d",
        "GOP2",
    ),
)
