src/snapshots/meshb__mail_parser__tests__group_name_should_work.snap
---
source: src/mail_parser.rs
expression: "group_name(\"GOP1\")"
---
Ok(
    (
        "",
        "GOP1",
    ),
)
