src/snapshots/meshb__mail_parser__tests__group_section_parser_should_work-4.snap
---
source: src/mail_parser.rs
expression: "group_section(\"GROUP_MA BORD_INT \\n bI1 Bi2\\n FINSF\")"
---
Ok(
    (
        "",
        Group(
            Group {
                group_type: Cell,
                name: "BORD_INT",
                elems: [
                    "bI1",
                    "Bi2",
                ],
            },
        ),
    ),
)
