src/snapshots/meshb__mail_parser__tests__mail_final_parser_should_work-3.snap
---
source: src/mail_parser.rs
expression: "mail_parser(\"COOR_3D %comment \\nN1 2  3.0 4\\n    % another comment\\nFINSF\")"
---
Ok(
    MailParseOutput {
        nodes: [
            Node {
                name: "N1",
                x: 2.0,
                y: 3.0,
                z: 4.0,
            },
        ],
        cells: [],
        groups: [],
    },
)
